--- a/Gallery.css
+++ b/Gallery.css
@@ -40,3 +40,15 @@ body{
     background-image: url(./0.JPG);
     border-radius: 10px;
 }
+@media (max-width: 490px) {
+    #imgContainer{
+    width: 100%;
+    height: 503px;
+    }
+    .a{
+        top: -8px;
+    width: 130px;
+        height: 130px;
+            transform: rotateY(20deg) skewY(-10deg);
+    }
+}
