--- a/Gallery.css
+++ b/Gallery.css
@@ -40,7 +40,7 @@ body{
     background-image: url(./0.JPG);
     border-radius: 10px;
 }
-@media (max-width: 490px) {
+@media (min-width: 490px) {
     #imgContainer{
     width: 100%;
     height: 503px;
