--- a/Gallery.css
+++ b/Gallery.css
@@ -42,13 +42,13 @@ body{
 }
 @media (max-width: 490px) {
     #imgContainer{
-    width: 100%;
-    height: 503px;
+    width: 100% !important;
+    height: 503px !important;
     }
     .a{
-        top: -8px;
-    width: 130px;
-        height: 130px;
+        top: -8px !important;
+    width: 130px !important;
+        height: 130px !important;
             transform: rotateY(20deg) skewY(-10deg);
     }
 }
